[project]
name = "WallpaperPlan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pywin32",
    "PyMuPDF",
    "Pillow",
    "opencv-python",
    "numpy",
    "pyyaml",
    "pyinstaller",
]

[tool.pyinstaller]
name = "WallpaperPlan"
onefile = true
console = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
